--- a/SICC/style.css
+++ b/SICC/style.css
@@ -67,9 +67,6 @@ div{
       overflow: hidden;
       border-radius: 20px;
       margin: auto;
-
-
-
 }
 
 
@@ -79,12 +76,6 @@ div{
   border: 1px solid #CCC;
   padding: 5px;
 }
-
-
-
-
-
-
 
 .contPersonal{
   border-style: dashed;
@@ -97,6 +88,7 @@ div{
   left: 10%;
   margin: auto
 }
+
 .contPersonal2{
   position: relative;
   border-style: dashed;
@@ -136,7 +128,6 @@ div{
   margin: 3px;
 }
 
-
 .contBombero{
   padding: 20px;
   border: 2px solid black;
@@ -156,10 +147,7 @@ div{
 
 .contBotones{
   position: relative;
-
-
 }
-
 
 .button {
   display: inline-block;
@@ -394,35 +382,51 @@ color: white;
 .divFondo{
   position: absolute;
   top: 20%;
-  width: 70%;
-  height: 73%;
+  width: 710px;
+  height: 570px;
   left: 24%;
   background-color: white;
   padding: 15px 25px;
   border-radius: 15px;
   border: 2px solid black;
+  overflow-x: scroll;
 }
 .divFondoTablas{
   position: absolute;
-  width: 69%;
-  height: auto;
+  width: 710px;
+  height: 570px;
   top: 20%;
   left: 24%;
   background-color: white;
   padding: 15px 25px;
   border-radius: 15px;
   border: 2px solid black;
+  overflow-x:scroll ;
 }
 
 .tablaUsuarioss{
   position: relative;
-  width: 130px;
-  height: 300px;
+  width: 170px;
+  height: 280px;
   margin: 100px;
   float: left;
   background: #FADBD8;
-  border-radius: 20px;
+  border-radius: 15px;
   margin: 2px;
   border: 1px solid black;
 
+}
+
+.fotoBombero{
+  width: 100%;
+
+  border-radius: 15px;
+}
+
+
+.scroll{
+  background-color: lightblue;
+  width: 110px;
+  height: 110px;
+  overflow: scroll;
 }
