--- a/SICC/style.css
+++ b/SICC/style.css
@@ -5,12 +5,23 @@ body{
   margin: 0;
 }
 
+
+
+.logo{
+  width:100px;
+  height:100px;
+  border-radius:150px;
+  position: relative;
+  top: 50px;
+  border:5px solid #666;
+}
 .slider{
   position: relative;
   width: 730px;
   margin: auto;
   overflow: hidden;
-
+  top: 0px;
+  right: 0px;
 }
 
 .slider ul{
@@ -44,8 +55,6 @@ body{
       100% {margin-left: -300%;}
 }
 
-
-
 div{
   width: auto;
   height: auto;
@@ -55,7 +64,6 @@ div{
   top: 25%;
   left: 2%;
 }
-
 
 .formulario{
   left: 20%;
@@ -68,9 +76,6 @@ div{
       border-radius: 20px;
       margin: auto;
 }
-
-
-
 
 .formulario input {
   border: 1px solid #CCC;
@@ -92,14 +97,16 @@ div{
 .contPersonal2{
   position: relative;
   border-style: dashed;
-  width: 300px;
+  width: 325px;
+  height: 480px;
   float: left;
-  left: -2%;
-  top: -1%;
-  padding: 20px;
+  left: 5px;
+  top: 0px;
+  padding: 15px;
   border: 2px solid black;
   border-radius: 25px;
   margin: 3px;
+
 }
 
 .contPersonal2 .input-info {
@@ -127,6 +134,19 @@ div{
   border-radius: 25px;
   margin: 3px;
 }
+.contPersonal3 .input-info{
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  margin-bottom: 15px;
+}
 
 .contBombero{
   padding: 20px;
@@ -134,15 +154,6 @@ div{
   border-radius: 20px;
   float: right;
   margin: auto
-}
-
-.logo{
-  width:100px;
-  height:100px;
-  border-radius:150px;
-  position: relative;
-  top: 50px;
-  border:5px solid #666;
 }
 
 .contBotones{
@@ -153,7 +164,6 @@ div{
   display: inline-block;
   padding: 15px 25px;
   font-size: 24px;
-
   cursor: pointer;
   text-align: center;
   text-decoration: none;
@@ -182,7 +192,6 @@ div{
   border-radius: 15px;
   box-shadow: 0 9px #999;
 }
-
 
 .buttonS {
   display: inline-block;
@@ -221,8 +230,6 @@ div{
   margin: 1px;
 }
 
-
-
 .btnForm {
   display: inline-block;
   width: 180px;
@@ -249,10 +256,6 @@ div{
   box-shadow: 0 5px #666;
   transform: translateY(4px);
 }
-
-
-
-
 
 .contenedorInformacion{
   position: relative;
@@ -302,7 +305,6 @@ div{
 }
 
 .form3{
-
 	width: 180px;
 	height: 450px;
 	padding: 20px;
@@ -329,7 +331,6 @@ div{
   background-color: #BACDD0;
   border-radius: 15px;
   box-shadow: 0 9px #999;
-
 }
 
 .largerCheckbox {
@@ -350,28 +351,8 @@ div{
   float: left;
   border-radius: 10px;
   margin: 1px;
-
 }
 
-.divC2{
-  width: 180px;
-  height: 310px;
-  padding: 20px;
-  border: 2px solid black;
-  float: right;
-  border-radius: 10px;
-  margin: auto;
-}
-
-.divC3{
-  width: 180px;
-  height: 310px;
-  padding: 20px;
-  border: 2px solid black;
-  float: center;
-  border-radius: 10px;
-  margin: auto;
-}
 .textoLogo{
   position: absolute;
   top: -50px;
@@ -379,34 +360,37 @@ div{
   -webkit-text-stroke: 0.5px black;
 color: white;
 }
+
 .divFondo{
   position: absolute;
-  top: 20%;
-  width: 710px;
-  height: 570px;
-  left: 24%;
+  top: 140px;
+  width: 750px;
+  height: 575px;
+  left: 210px;
   background-color: white;
   padding: 15px 25px;
   border-radius: 15px;
   border: 2px solid black;
-  overflow-x: scroll;
 }
+
+
+
 .divFondoTablas{
   position: absolute;
-  width: 710px;
-  height: 570px;
-  top: 20%;
-  left: 24%;
+  top: 140px;
+  width: 750px;
+  height: 575px;
+  left: 210px;
   background-color: white;
   padding: 15px 25px;
   border-radius: 15px;
   border: 2px solid black;
-  overflow-x:scroll ;
+  overflow-y: scroll;
 }
 
 .tablaUsuarioss{
   position: relative;
-  width: 170px;
+  width: 200px;
   height: 280px;
   margin: 100px;
   float: left;
@@ -418,15 +402,36 @@ color: white;
 }
 
 .fotoBombero{
-  width: 100%;
-
+  width: 200px;
+  height: 180px;
   border-radius: 15px;
 }
-
-
+.imagenBombero{
+  position: absolute;
+  top: 180px;
+  right: 20px;
+  width: 300px;
+  height: 300px;
+  border-radius: 15px;
+}
 .scroll{
   background-color: lightblue;
   width: 110px;
   height: 110px;
   overflow: scroll;
+}
+
+.divListado{
+  width: 180px;
+  height: 450px;
+  padding: 20px;
+  border: 2px solid black;
+  float: left;
+  border-radius: 10px;
+  margin: 1px;
+}
+
+#divListado{
+  overflow: hidden;
+  overflow-x: hidden;
 }
